@@ -86,7 +86,13 @@ public:
     bool hit;
 };
 
-TEST(CCThreadTest, startPostAndWaitOnCondition)
+#if OS(WINDOWS) || OS(MAC_OS_X)
+#define MAYBE_startPostAndWaitOnCondition DISABLED_startPostAndWaitOnCondition
+#else
+#define MAYBE_startPostAndWaitOnCondition startPostAndWaitOnCondition
+#endif
+
+TEST(CCThreadTest, MAYBE_startPostAndWaitOnCondition)
 {
     OwnPtr<WebThread> webThread = adoptPtr(webKitPlatformSupport()->createThread("test"));
 
